# centr_invest_ml

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-deploy.yaml
app/: __init__.py  __main__.py  config.py  main.py  ml_adapter.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 4e75984885ad_init.py  4ef93a51888d_add_default_uuid_generator.py  505c691b97b7_init.py  62e61e22d492_add_transaction.py  c537e516a96a_configure_user.py
app/core/: app.py  db.py
app/models/: __init__.py  base.py  enums.py  transaction.py  user.py
app/routes/: __init__.py  auth.py  ml.py  transactions.py  users.py  ws.py
app/routes/category_classifier/: __init__.py  routes.py
app/schemas/: auth.py  health.py  ml.py  notifications.py  transactions.py
app/services/: errors.py  exception_handler.py  filters.py  password_encoder.py  token_provider.py
app/services/auth/: __init__.py  errors.py  permissions.py  token_provider.py
app/services/ml/: __init__.py  config.py  service.py  train.py
app/services/protocols/: category_classifier.py  (+2 more)
app/settings/: app.py  db.py  ml.py
docker/: entrypoint.sh  infra.compose.yml  init.sql  nginx.conf
docs/: api.md
ml/: __init__.py  config.py  data_generator.py  model.py  nn_model.py  train.py
ml/data/: ci_data.txt
models/: test_split.csv  transaction_classifier.joblib  transaction_classifier_report.json
resources/models/: train_split.csv  transaction_classifier.joblib
scripts/: benchmark.py
tests/: generate_dataset.py  generated_transactions.csv  test_data_generator.py  test_torch_nn_classifier.py  transactions.csv
(+10 files in other folders)
